# FYS4130

./: README.md
Oblig1/: 3b.py  3c.py  oblig1.py
Oblig1/old_testing/: 3b.py
Oblig2/: analysis.py  gpt_test.py  jax_test.py  jit_gpt_test.py  monte_carlo.py  monte_carlo_wolff.cpp  newMC.py  old_cpp_MC.cpp  old_monte_carlo.py  results.txt  second_jit_gpt_test.py  test.py  test2.py
Oblig2/cpp_dir/: CMakeLists.txt  Spin_Model.cpp  Spin_Model.hpp  analysis.py  main.cpp  results.txt
Problem Sets/: 17_2.py  17_5.py  3_3.py  3_9.py  ch17.py
